feat: Switching from md to mdx adding inline images in mdx and code highlighting

--- a/src/wiki/fantastic-beasts-and-where-to-find-them/index.mdx
+++ b/src/wiki/fantastic-beasts-and-where-to-find-them/index.mdx
@@ -5,8 +5,7 @@ slug: 'fantastic-beasts'
 author: 'Praveen Kumar'
 banner: ./test.jpg
 tags:
-  - tag1
-  - tag2
+  - Novel
 ---
 
 Here will a live code example go:
