--- a/src/wiki/harry-potter-and-the-half-blood-prince/index.mdx
+++ b/src/wiki/harry-potter-and-the-half-blood-prince/index.mdx
@@ -5,8 +5,8 @@ slug: 'harry-potter'
 author: 'Praveen Kumar'
 banner: ./test.jpg
 tags:
-  - tag1
-  - tag2
+  - Novel
+  - Highlight
 ---
 
 | Number | Title                                    | Year |
